tests/unit-fail/j026c.ref
Error: FC1
Description: attempt to call the function f through a pointer with incompatible type.
Type: Undefined behavior.
See also: C11 sec. 6.5.2.2:9
  at main(j026c.c:8)
  at <file-scope>(<unknown>)
